argocd/manifests/healthchecks/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthchecks
  namespace: healthchecks
  labels:
    app: healthchecks
    app.kubernetes.io/name: healthchecks
spec:
  selector:
    app: healthchecks
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
